--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,17 +1,16 @@
 .appWindow {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   /* justify-content: center; */
   align-items: center;
   flex-direction: column;
-  padding-top: 0;
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
 }
 
-.title {
+/* .title {
   text-decoration: none;
-  /* background-color: yellow; */
   width: 100vw;
   margin: 0;
 }
@@ -22,9 +21,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: #333; */
   color: white;
 }
 .navLink {
   text-decoration: none;
-}
+} */
