--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,16 @@
-#root {
+/* this file has global styles for the document */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100;
+}
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Pixelify+Sans&family=Roboto&display=swap");
+body {
+  font-family: "Roboto", sans-serif;
+}
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +51,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
