--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  min-width: 500px;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
@@ -58,4 +59,26 @@
   margin-top: 3rem;
   font-size: 0.75rem;
   padding-bottom: 1rem;
+}
+
+/* styling for mobile */
+@media (max-width: 500px) {
+  .container {
+    width: 500px;
+  }
+  .linksAndInfo {
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+  }
+  .divider {
+    height: 2px;
+    width: 80%;
+  }
+  .description {
+    text-align: center;
+  }
+  .footer {
+    gap: 1rem;
+  }
 }
