--- a/src/components/HomeComponents/Header/Header.module.css
+++ b/src/components/HomeComponents/Header/Header.module.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   /* background-color: yellow; */
   width: 100vw;
+  height: 10rem;
   margin: 0;
   justify-content: center;
   align-items: center;
   position: sticky;
-  top: 0;
+  /* top: 0; */
+  transition: background-color 0.3s ease;
 }
 /* .spacer {
   flex: 1;
@@ -15,9 +17,40 @@
 .titleLink {
   text-decoration: none;
   color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin: 0; */
+}
+.topTitle,
+.bottomTitle {
+  margin: 0;
+}
+.topTitle {
+  letter-spacing: 8px;
+  /* font-weight: 900; */
+}
+.bottomTitle {
+  /* font-weight: 100; */
+  letter-spacing: 4px;
+  font-size: 1rem;
 }
 .shoppingBag {
   /* flex: none; */
   position: absolute;
   right: 0;
+}
+.scrolled {
+  background-color: black;
+  position: sticky;
+  top: 0;
+  flex-direction: row;
+  justify-content: center;
+  height: 5rem;
+  color: white;
+  /* fontsize: */
+}
+
+.scrolledText {
+  color: white;
 }
