--- a/src/components/HomeComponents/NavBar/NavBar.module.css
+++ b/src/components/HomeComponents/NavBar/NavBar.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #333;
+  background-color: black;
   /* color: white; */
 }
 .navLink {
