--- a/src/components/HomeComponents/NavBar/NavBarMobile.module.css
+++ b/src/components/HomeComponents/NavBar/NavBarMobile.module.css
@@ -20,6 +20,7 @@
   width: 80%;
   /* margin: 1rem; */
   padding: 1rem;
+  box-sizing: border-box;
   letter-spacing: 4px;
   /* justify-content: center; */
   /* align-items: center; */
