--- a/src/components/HomeComponents/Header/Header.module.css
+++ b/src/components/HomeComponents/Header/Header.module.css
@@ -75,8 +75,8 @@
 }
 .scrolled {
   background-color: black;
-  position: sticky;
-  top: 0;
+  /* position: sticky; */
+  /* top: 0; */
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -90,7 +90,7 @@
 }
 .scrolledOuter {
   background-color: black;
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   flex-direction: column;
   justify-content: space-between;
