--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -1,15 +1,42 @@
+.container {
+  width: 100%;
+}
 .textAndPhoto {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  background: red;
+  width: 100%;
+}
+.textContainer {
+  width: 25rem;
+  display: flex;
+  justify-content: center;
+  background-color: yellow;
 }
 .text {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 25rem;
+  /* height: 20rem; */
+  padding: 1rem;
+}
+.imgContainer {
+  flex-grow: 1;
+  height: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .photo {
-  width: 500px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+  /* clip-path: inset(10% 0 10% 0); */
+  height: 100%;
 }
 .header {
   font-size: 2rem;
