commit before changing router
just commiting before changing router just to be safe

--- a/src/components/Products/Products.module.css
+++ b/src/components/Products/Products.module.css
@@ -50,6 +50,14 @@
 
   /* clip-path: inset(10% 0 10% 0); */
 }
+
+.productsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+}
 @media (max-width: 430px) {
   .textAndPhoto {
     flex-direction: column;
