--- a/src/components/GetProductCards/GetProductCards.module.css
+++ b/src/components/GetProductCards/GetProductCards.module.css
@@ -4,53 +4,53 @@
   flex-wrap: wrap; */
   /* flex-direction: column; */
   grid-template-columns: repeat(3, auto);
-  width: 100%;
+  width: 80%;
   margin: 100px;
 
   gap: 20px;
 }
 .linkContainer {
   /* width: 90%; */
-  height: 30rem;
+  /* height: 30rem;
   width: 30rem;
   background-color: red;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 .productCard {
-  border: 5px solid black;
+  /* border: 5px solid black; */
   /* margin: 5rem; */
-  width: 100%;
-  height: 30rem;
+  /* width: 100%;
+  height: 30rem; */
   /* height: 30rem; */
   /* overflow: hidden; */
-  background: #f2efee;
+  /* background: #f2efee;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: center; */
 }
 
 .img-container {
-  background-color: blue;
+  /* background-color: blue; */
   /* height: 20rem; */
   /* height: 100%; */
-  border-radius: 20px;
+  /* border-radius: 20px; */
 }
 .img {
   /* width: 100%; */
-  background-color: red;
+  /* background-color: red; */
 
-  max-width: 80%;
-  max-height: 60%;
+  /* max-width: 80%;
+  max-height: 60%; */
   /* padding: 2rem; */
 
   /* this ensures the image is visible without distortion */
   /* object-fit: contain; */
 }
 .text-container {
-  background-color: yellow;
+  /* background-color: yellow; */
 }
