fix bag number indicator
bag number indicator is now properly styled to display number of items in cart on the bottom right side of the bag icon

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.cart {
+/* .cart {
   display: flex;
   flex-direction: column;
 }
@@ -17,4 +17,4 @@
 }
 .img {
   width: 10%;
-}
+} */
