--- a/src/components/Cart/CartCard.module.css
+++ b/src/components/Cart/CartCard.module.css
@@ -1,1 +1,38 @@
-import styles from "./Cart.module.css";
+/* .cart {
+  display: flex;
+  flex-direction: column;
+} */
+
+/* trying flexbox */
+/* .cartCard {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+} */
+
+/* grid instead of flexbox */
+.cartCard {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+}
+.imgContainer {
+  width: 125px;
+  height: 125px;
+  /* place-self: center; */
+}
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.title {
+  /* place-self: start; */
+  justify-self: start;
+}
+.button {
+  width: 100px;
+  height: 75px;
+}
