--- a/src/components/HomeComponents/Header/Header.module.css
+++ b/src/components/HomeComponents/Header/Header.module.css
@@ -1,7 +1,7 @@
 .outerContainer {
   display: flex;
   flex-direction: column;
-  /* background-color: yellow; */
+  background-color: yellow;
   width: 100%;
   /* height: 10rem; */
   margin: 0;
@@ -72,6 +72,26 @@
   /* position: absolute; */
   /* right: 0; */
   /* flex-grow: 1; */
+  position: relative;
+}
+.itemCount {
+  position: absolute;
+  top: 35px;
+  /* right: 60px; */
+  left: 30px;
+
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  color: white;
+}
+.itemCountBackground {
+  background-color: white;
+  color: black;
 }
 .scrolled {
   background-color: black;
