--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -2,8 +2,28 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: space-around;
   align-items: center;
+  min-height: 500px;
+}
+.title {
+  font-weight: bold;
+  font-size: 1.5rem;
+  letter-spacing: 2px;
+  margin: 2rem;
+}
+.itemLabels {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  box-shadow: ;
+}
+.horizontalLine {
+  width: 90%;
+  height: 1px;
+  background-color: #000;
 }
 
 /* .cart {
