--- a/src/components/GetProductCards/GetProductCards.module.css
+++ b/src/components/GetProductCards/GetProductCards.module.css
@@ -9,6 +9,14 @@
 
   gap: 20px;
 }
+
+@media (max-width: 430px) {
+  .container {
+    grid-template-columns: repeat(1, auto);
+    margin: 0;
+    margin-bottom: 100px;
+  }
+}
 .linkContainer {
   /* width: 90%; */
   /* height: 30rem;
