--- a/src/components/HomeComponents/Header/Header.module.css
+++ b/src/components/HomeComponents/Header/Header.module.css
@@ -49,6 +49,9 @@
 
   /* margin: 0; */
 }
+.title {
+  /* margin: 1rem; */
+}
 /* .titleLink:hover {
 } */
 .topTitle,
@@ -80,12 +83,17 @@
   /* right: 60px; */
   left: 30px;
 
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
+
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+
+  font-weight: bold;
+  font-size: 0.75rem;
   background-color: black;
   color: white;
 }
@@ -103,6 +111,7 @@
   height: 5rem;
   color: white;
   box-sizing: border-box;
+
   /* padding: 20px; */
   /* fontsize: */
   /* display: flex;
@@ -126,6 +135,7 @@
   flex-direction: row; */
   display: contents;
   /* background-color: red; */
+  /* margin: 2rem; */
 }
 .scrolledText {
   color: white;
