--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
-  background-color: yellow;
+  background-color: #ffc038;
 }
 .linksAndInfo {
   display: flex;
