--- a/src/components/HomeComponents/Header/Header.module.css
+++ b/src/components/HomeComponents/Header/Header.module.css
@@ -1,7 +1,7 @@
 .outerContainer {
   display: flex;
   flex-direction: column;
-  background-color: yellow;
+  background-color: #ffc038;
   width: 100%;
   /* height: 10rem; */
   margin: 0;
